--- a/layanan/layanan.html
+++ b/layanan/layanan.html
@@ -14,42 +14,68 @@
       <p class="text-center text-sm text-white font-light mt-5 mx-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, quod.</p>
     </header>
 
-    <section id="layanan" class="flex justify-center gap-5 my-10">
-      <div class="w-1/4 bg-slate-300 p-2 mt-16 rounded-lg h-[40rem]">
-        <h2 class="text-lg font-bold text-slate-700 text-center py-4">Wedding Decor</h2>
-        <p class="text-xs font-light indent-2 mt-2 text-center">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam iusto eveniet nemo. Libero itaque enim accusamus, labore repudiandae numquam minima quia, ducimus fugiat adipisci consequatur blanditiis sequi porro temporibus
-          molestiae.
+    <section id="layanan" class="flex flex-wrap px-10 justify-center gap-5 my-10 lg:gap-8">
+      <div class="w-full bg-slate-300 p-5 mt-16 rounded-lg lg:w-1/5 lg:mb-28">
+        <h2 class="text-xl font-bold text-slate-700 text-center py-4 lg:text-3xl">Wedding Decor</h2>
+        <p class="text-xs font-light indent-2 mt-2 text-center lg:text-base">
+          Permata Party, kami berkomitmen untuk menciptakan pengalaman visual yang tak terlupakan dengan sentuhan kreatif dan detail yang sempurna. Setiap pasangan memiliki cerita cinta mereka sendiri, dan kami bekerja keras untuk
+          menggambarkannya melalui dekorasi yang kami ciptakan.
         </p>
-        <p class="text-xs font-light indent-2 mt-2 text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit dolor unde perferendis quos.</p>
+        <p class="text-xs font-light indent-2 mt-2 text-center lg:text-base">
+          Dekorasi pernikahan kami menciptakan suasana yang mewah, romantis, dan elegan. Kami memahami bahwa pernikahan adalah salah satu hari terpenting dalam hidup Anda, dan kami bertekad untuk memastikan bahwa setiap detail dekorasi
+          mencerminkan keindahan cinta Anda.
+        </p>
         <a href="" class="text-sm font-semibold block box-border mt-5 p-2 bg-slate-600 text-center m-auto text-white rounded-full hover:text-slate-700 hover:bg-white hover:scale-110 transition-all"
           >Pesan <span class="text-yellow-300">NOW</span></a
         >
       </div>
 
-      <div class="w-1/4 bg-cyan-200 p-2 rounded-lg h-[48rem]">
-        <h2 class="text-lg font-bold text-slate-700 text-center py-4">Wedding Makeup</h2>
-        <p class="text-xs font-light indent-2 mt-2 text-center">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam iusto eveniet nemo. Libero itaque enim accusamus, labore repudiandae numquam minima quia, ducimus fugiat adipisci consequatur blanditiis sequi porro temporibus
-          molestiae.
+      <div class="w-full bg-cyan-200 p-5 rounded-lg lg:w-1/5">
+        <h2 class="text-xl font-bold text-slate-700 text-center py-4 lg:text-3xl">Wedding Makeup</h2>
+        <p class="text-xs font-light indent-2 mt-2 text-center lg:text-base">
+          Di Permata Party, Anda akan menemukan MUA yang berdedikasi berbakat yang akan memastikan penampilan Anda menjadi seindah mungkin pada hari pernikahan Anda. MUA di Permata Party memiliki keahlian yang luar biasa dalam seni rias
+          wajah dan tahu betul bagaimana menonjolkan kecantikan alami Anda sambil memahami gaya yang Anda inginkan.
         </p>
-        <p class="text-xs font-light indent-2 mt-2 text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit dolor unde perferendis quos.</p>
+        <p class="text-xs font-light indent-2 mt-2 text-center lg:text-base">
+          Mereka tidak hanya memahami beragam teknik riasan, tetapi juga sangat memperhatikan detail dan tahu betul bagaimana menciptakan tampilan yang tahan lama sepanjang acara pernikahan Anda. Dengan menggunakan produk kosmetik
+          berkualitas tinggi dan peralatan profesional, MUA di Permata Party akan memastikan bahwa tampilan Anda tetap segar dan indah sepanjang hari.
+        </p>
+        <p class="text-xs font-light indent-2 mt-2 text-center lg:text-base">
+          Dengan perhatian yang teliti terhadap detail dan pelayanan yang ramah, MUA di Permata Party adalah pilihan yang sempurna untuk memastikan Anda tampil sempurna pada hari pernikahan Anda. Dengan sentuhan mereka yang mahir, Anda
+          dapat yakin bahwa Anda akan merasa percaya diri dan menawan pada momen bersejarah Anda di Permata Party.
+        </p>
         <a href="" class="text-sm font-semibold block box-border mt-5 p-2 bg-slate-600 text-center m-auto text-white rounded-full hover:text-slate-700 hover:bg-white hover:scale-110 transition-all"
           >Pesan <span class="text-yellow-300">NOW</span></a
         >
       </div>
 
-      <div class="w-1/4 bg-slate-300 p-2 mt-16 rounded-lg h-[40rem]">
-        <h2 class="text-lg font-bold text-slate-700 text-center py-4">Wedding Gown</h2>
-        <p class="text-xs font-light indent-2 mt-2 text-center">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam iusto eveniet nemo. Libero itaque enim accusamus, labore repudiandae numquam minima quia, ducimus fugiat adipisci consequatur blanditiis sequi porro temporibus
-          molestiae.
+      <div class="w-full bg-slate-300 p-5 rounded-lg lg:mt-16 lg:w-1/5 lg:mb-28">
+        <h2 class="text-xl font-bold text-slate-700 text-center py-4 lg:text-3xl">Wedding Gown</h2>
+        <p class="text-xs font-light indent-2 mt-2 text-center lg:text-base">
+          Permata Party adalah destinasi terpercaya Anda dalam mencari dan menemukan baju pengantin impian. Kami memahami betapa pentingnya penampilan memukau pada hari yang penuh makna ini, dan itulah mengapa kami berdedikasi untuk
+          memberikan pengalaman berbelanja yang tak terlupakan.
         </p>
-        <p class="text-xs font-light indent-2 mt-2 text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit dolor unde perferendis quos.</p>
+        <p class="text-xs font-light indent-2 mt-2 text-center lg:text-base">
+          Tim kami yang berpengalaman siap membantu Anda menemukan gaun yang sesuai dengan gaya dan anggaran Anda. Kami percaya bahwa setiap pasangan memiliki cerita cinta yang unik, dan kami ingin membantu Anda mengungkapkannya melalui
+          penampilan Anda di hari besar.
+        </p>
         <a href="" class="text-sm font-semibold block box-border mt-5 p-2 bg-slate-600 text-center m-auto text-white rounded-full hover:text-slate-700 hover:bg-white hover:scale-110 transition-all"
           >Pesan <span class="text-yellow-300">NOW</span></a
         >
       </div>
     </section>
+
+    <footer class="py-5">
+      <div class="m-auto pb-10">
+        <div class="sosmed mt-5 flex justify-center">
+          <a href="" class="block w-16 lg:w-24 hover:scale-110"><img src="../img/Whatsapp.png" alt="Whatsapp" /></a>
+          <a href="" class="block w-16 lg:w-24 hover:scale-110"><img src="../img/Instagram.png" alt="Whatsapp" /></a>
+          <a href="" class="block w-16 lg:w-24 hover:scale-110"><img src="../img/Tiktok.png" alt="Whatsapp" /></a>
+          <a href="" class="block w-16 lg:w-24 hover:scale-110"><img src="../img/Twitter.png" alt="Whatsapp" /></a>
+          <a href="" class="block w-16 lg:w-24 hover:scale-110"><img src="../img/Facebook.png" alt="Whatsapp" /></a>
+        </div>
+      </div>
+      <p class="text-white text-xs font-light text-center lg:text-base lg:font-normal">All Right Reserved, Copyrigth &copy; Create & Desain by <a href="" class="text-cyan-300">Auliya</a></p>
+    </footer>
   </body>
 </html>
