--- a/layanan/layanan.html
+++ b/layanan/layanan.html
@@ -15,6 +15,7 @@
     </header>
 
     <section id="layanan" class="flex flex-wrap px-10 justify-center gap-5 my-10 lg:gap-8">
+      <!-- decor -->
       <div class="w-full bg-slate-300 p-5 mt-16 rounded-lg lg:w-1/5 lg:mb-28">
         <h2 class="text-xl font-bold text-slate-700 text-center py-4 lg:text-3xl">Wedding Decor</h2>
         <p class="text-xs font-light indent-2 mt-2 text-center lg:text-base">
@@ -25,11 +26,13 @@
           Dekorasi pernikahan kami menciptakan suasana yang mewah, romantis, dan elegan. Kami memahami bahwa pernikahan adalah salah satu hari terpenting dalam hidup Anda, dan kami bertekad untuk memastikan bahwa setiap detail dekorasi
           mencerminkan keindahan cinta Anda.
         </p>
-        <a href="" class="text-sm font-semibold block box-border mt-5 p-2 bg-slate-600 text-center m-auto text-white rounded-full hover:text-slate-700 hover:bg-white hover:scale-110 transition-all"
+        <a href="harga/decor.html" class="text-sm font-semibold block box-border mt-5 p-2 bg-slate-600 text-center m-auto text-white rounded-full hover:text-slate-700 hover:bg-white hover:scale-110 transition-all"
           >Pesan <span class="text-yellow-300">NOW</span></a
         >
       </div>
+      <!-- akhir decor -->
 
+      <!-- makeup -->
       <div class="w-full bg-cyan-200 p-5 rounded-lg lg:w-1/5">
         <h2 class="text-xl font-bold text-slate-700 text-center py-4 lg:text-3xl">Wedding Makeup</h2>
         <p class="text-xs font-light indent-2 mt-2 text-center lg:text-base">
@@ -44,11 +47,13 @@
           Dengan perhatian yang teliti terhadap detail dan pelayanan yang ramah, MUA di Permata Party adalah pilihan yang sempurna untuk memastikan Anda tampil sempurna pada hari pernikahan Anda. Dengan sentuhan mereka yang mahir, Anda
           dapat yakin bahwa Anda akan merasa percaya diri dan menawan pada momen bersejarah Anda di Permata Party.
         </p>
-        <a href="" class="text-sm font-semibold block box-border mt-5 p-2 bg-slate-600 text-center m-auto text-white rounded-full hover:text-slate-700 hover:bg-white hover:scale-110 transition-all"
+        <a href="harga/makeup.html" class="text-sm font-semibold block box-border mt-5 p-2 bg-slate-600 text-center m-auto text-white rounded-full hover:text-slate-700 hover:bg-white hover:scale-110 transition-all"
           >Pesan <span class="text-yellow-300">NOW</span></a
         >
       </div>
+      <!-- akhir makeup -->
 
+      <!-- gaun -->
       <div class="w-full bg-slate-300 p-5 rounded-lg lg:mt-16 lg:w-1/5 lg:mb-28">
         <h2 class="text-xl font-bold text-slate-700 text-center py-4 lg:text-3xl">Wedding Gown</h2>
         <p class="text-xs font-light indent-2 mt-2 text-center lg:text-base">
@@ -59,10 +64,11 @@
           Tim kami yang berpengalaman siap membantu Anda menemukan gaun yang sesuai dengan gaya dan anggaran Anda. Kami percaya bahwa setiap pasangan memiliki cerita cinta yang unik, dan kami ingin membantu Anda mengungkapkannya melalui
           penampilan Anda di hari besar.
         </p>
-        <a href="" class="text-sm font-semibold block box-border mt-5 p-2 bg-slate-600 text-center m-auto text-white rounded-full hover:text-slate-700 hover:bg-white hover:scale-110 transition-all"
+        <a href="harga/gaun.html" class="text-sm font-semibold block box-border mt-5 p-2 bg-slate-600 text-center m-auto text-white rounded-full hover:text-slate-700 hover:bg-white hover:scale-110 transition-all"
           >Pesan <span class="text-yellow-300">NOW</span></a
         >
       </div>
+      <!-- akkhir gaun -->
     </section>
 
     <footer class="py-5">
