--- a/layanan/harga/makeup.html
+++ b/layanan/harga/makeup.html
@@ -164,16 +164,31 @@
     <!-- footer -->
     <section>
       <div class="sosmed mt-5 flex justify-center">
-        <a href="" class="block w-16 lg:w-24 hover:scale-110"><img src="../../img/Whatsapp.png" alt="Whatsapp" /></a>
-        <a href="" class="block w-16 lg:w-24 hover:scale-110"><img src="../../img/Instagram.png" alt="Whatsapp" /></a>
-        <a href="" class="block w-16 lg:w-24 hover:scale-110"><img src="../../img/Tiktok.png" alt="Whatsapp" /></a>
-        <a href="" class="block w-16 lg:w-24 hover:scale-110"><img src="../../img/Twitter.png" alt="Whatsapp" /></a>
-        <a href="" class="block w-16 lg:w-24 hover:scale-110"><img src="../../img/Facebook.png" alt="Whatsapp" /></a>
+        <a href="https://wa.me/6281264416901" target="_blank" class="block w-16 lg:w-24 hover:scale-110"><img src="../../img/Whatsapp.png" alt="Whatsapp" /></a>
+        <a href="https://instagram.com/permata.deco?igshid=OGQ5ZDc2ODk2ZA" target="_blank" class="block w-16 lg:w-24 hover:scale-110"><img src="../../img/Instagram.png" alt="INstagram" /></a>
+        <a href="https://www.tiktok.com/@permatadeco?_t=8hKCYvh6R2v&_r=1" target="_blank" class="block w-16 lg:w-24 hover:scale-110"><img src="../../img/Tiktok.png" alt="Tiktok" /></a>
+        <!-- <a href="" class="block w-16 lg:w-24 hover:scale-110"><img src="../../img/Twitter.png" alt="Whatsapp" /></a> -->
+        <a href="https://www.facebook.com/ita.yuhasnita?mibextid=9R9pXO" target="_blank" class="block w-16 lg:w-24 hover:scale-110"><img src="../../img/Facebook.png" alt="facebook" /></a>
       </div>
       <footer class="py-5">
-        <p class="text-white text-xs font-light text-center lg:text-base lg:font-normal">All Right Reserved, Copyrigth &copy; Create & Desain by <a href="" class="text-cyan-300">Auliya</a></p>
+        <p class="text-white text-xs font-light text-center lg:text-base lg:font-normal">
+          All Right Reserved, Copyrigth &copy; Create & Desain by <a href="https://instagram.com/permata.deco?igshid=OGQ5ZDc2ODk2ZA" target="_blank" class="text-cyan-300">Permata Party</a>
+        </p>
       </footer>
     </section>
     <!-- akhir footer -->
+
+    <!-- home -->
+    <section class="home bg-[#69dbc3] w-fit p-3 rounded-2xl fixed bottom-5 right-5 opacity-30 hover:opacity-100">
+      <a href="../layanan.html">
+        <svg role="img" viewBox="0 0 24 24" width="30px" height="20px" class="m-auto" xmlns="http://www.w3.org/2000/svg">
+          <title>Google Home</title>
+          <path
+            d="M12 0a1.44 1.44 0 0 0-.947.399L.547 10.762a1.26 1.26 0 0 0-.342.808v11.138c0 .768.53 1.292 1.311 1.292h20.968c.78 0 1.311-.522 1.311-1.292V11.57a1.25 1.25 0 0 0-.34-.804L15.68 3.097h-.001L12.947.4A1.454 1.454 0 0 0 12 0Zm0 6.727 6.552 6.456v5.65H5.446v-5.65z"
+          />
+        </svg>
+        <p class="text-center text-xs font-semibold">Home</p>
+      </a>
+    </section>
   </body>
 </html>
