--- a/user/register.html
+++ b/user/register.html
@@ -8,6 +8,7 @@
     <!-- tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
+
   <body>
     <div class="logo absolute top-0 left-0">
       <img src="../img/logo.png" alt="logo" class="w-20 bg-slate-500 rounded-br-xl shadow-sm" />
@@ -52,7 +53,7 @@
 
         <div class="flex justify-between mt-3">
           <p class="text-slate-500 font-light">Sudah memiliki akun?</p>
-          <a href="register.html" class="text-slate-800 font-semibold hover:text-teal-600">Login</a>
+          <a href="login.php" class="text-slate-800 font-semibold hover:text-teal-600">Login</a>
         </div>
       </form>
 
