--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
     <!-- tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="overflow-y-hidden">
     <div class="absolute -z-10 top-0 left-0 right-0 bottom-0">
-      <video loop muted autoplay poster="img/home.jpg" class="w-screen h-screen brightness-[50%] blur-[2px]">
-        <source src="img/bg-video.mp4" type="video/mp4" />
-      </video>
+      <video src="img/bg-video.mp4" loop muted autoplay class="w-screen brightness-[50%]"></video>
     </div>
 
-    <section class="flex justify-center h-screen mt-16">
+    <section class="flex justify-center h-screen mt-96 lg:mt-16">
       <div class="self-start">
-        <h1 class="lg:text-white text-5xl font-extrabold p-6 text-center lg:text-7xl">Siapa Anda ?</h1>
+        <h1 class="lg:text-white text-5xl font-extrabold p-6 mb-5 text-center lg:text-7xl">Siapa Anda 🤔</h1>
         <div class="flex justify-around">
-          <a href="admin/index.php" class="w-24 h-8 text-center leading-8 bg-slate-400 rounded-full text-base font-bold lg:text-2xl lg:w-32 lg:h-10 lg:leading-10 hover:scale-110 transition-all">Admin</a>
-          <a href="user/index.php" class="w-24 h-8 text-center leading-8 bg-teal-300 rounded-full text-base font-bold lg:text-2xl lg:w-32 lg:h-10 lg:leading-10 hover:scale-110 transition-all">User</a>
+          <a
+            href="admin/login.php?admin=true"
+            class="w-24 h-8 text-center text-teal-500 leading-8 bg-black lg:bg-white opacity-50 backdrop:blur-lg rounded-lg shadow-xl text-base font-bold lg:text-2xl lg:w-32 lg:h-10 lg:leading-10 hover:scale-110 transition-all"
+            >Admin</a
+          >
+          <a
+            href="user/login.php?user=true"
+            class="w-24 h-8 text-center text-teal-500 leading-8 bg-black lg:bg-white opacity-50 backdrop:blur-lg rounded-lg shadow-xl text-base font-bold lg:text-2xl lg:w-32 lg:h-10 lg:leading-10 hover:scale-110 transition-all"
+            >User</a
+          >
         </div>
       </div>
     </section>
